public interface Archivable {
    String archiveDocument();
}