public interface Printable {
    String printDocument();
}